--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,12 @@ yarn-error.log*
 
 # lock
 *.lock
+
+#awsmobilejs
+appsync-info.json
+aws-info.json
+project-info.json
+aws-exports.*
+awsmobilejs/.awsmobile/backend-build
+awsmobilejs/\#current-backend-info
+~awsmobilejs-*/
