--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-moment": "^0.9.7",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.1",
     "react-translate": "^7.0.1"
   },
   "devDependencies": {},
